# modbus-proxy-debugger

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
maps/: sungrow_hybrid.yaml
server/: api.py
tests/: test_proxy.py
web/: index.html
