[project]
name = "modbus-proxy-debugger"
version = "0.1.0"
description = "modbus tcp debugger tool"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "colorama>=0.4.6",
    "pyyaml>=6.0.3",
]

[project.scripts]
modbus-proxy = "main:run"

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.23.8",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
